--- a/views/index.twig
+++ b/views/index.twig
@@ -7,12 +7,17 @@
 </head>
 <body>
     <div id="login" style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
-        <h2>Entrez votre pseudo</h2>
-        <input type="text" id="pseudo" placeholder="Votre pseudo" autofocus>
-        <button id="enterChat">Entrer dans le chat</button>
+        <h2>Connexion</h2>
+        <form id="loginForm" autocomplete="off" method="POST">
+            <input type="text" id="pseudo" name="pseudo" placeholder="Votre pseudo" required autofocus>
+            <input type="password" id="password" name="password" placeholder="Mot de passe" required>
+            <button type="submit">Se connecter</button>
+        </form>
+        <div id="loginError" style="color:red; display:none;"></div>
     </div>
     <div id="chat" style="display:none;">
         <h2>Chat en Temps Réel</h2>
+        <button id="logoutBtn" style="float:right;">Déconnexion</button>
         <ul id="messages">
             {% if messages %}
                 {% for msg in messages %}
