--- a/views/index.twig
+++ b/views/index.twig
@@ -6,18 +6,12 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div id="login" style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
-        <h2>Connexion</h2>
-        <form id="loginForm" autocomplete="off" method="POST">
-            <input type="text" id="pseudo" name="pseudo" placeholder="Votre pseudo" required autofocus>
-            <input type="password" id="password" name="password" placeholder="Mot de passe" required>
-            <button type="submit">Se connecter</button>
-        </form>
-        <div id="loginError" style="color:red; display:none;"></div>
-    </div>
-    <div id="chat" style="display:none;">
-        <h2>Chat en Temps Réel</h2>
-        <button id="logoutBtn" style="float:right;">Déconnexion</button>
+    <div id="chat">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <h2>Chat en Temps Réel</h2>
+            <div style="margin-left: 2em; font-size: 1em; color: #333;">Connecté en tant que : <b>{% if user %}{{ user.pseudo }}{% endif %}</b></div>
+            <button id="logoutBtn" style="margin-left: 2em;">Déconnexion</button>
+        </div>
         <ul id="messages">
             {% if messages %}
                 {% for msg in messages %}
