--- a/views/not-validated.twig
+++ b/views/not-validated.twig
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
-        <h2>Votre compte n'est pas encore validé</h2>
-        <p>Un email de validation a été envoyé à votre adresse. Veuillez cliquer sur le lien reçu pour activer votre compte.</p>
-        <a href="/logout">Retour à la connexion</a>
-    </div>
+        <div class="container">
+            <h1>Votre compte n'est pas encore validé</h1>
+            <p>Un email de validation a été envoyé à votre adresse.<br>Veuillez cliquer sur le lien reçu pour activer votre compte.</p>
+            <a href="/logout" class="button">Retour à la connexion</a>
+            <div class="footer" style="margin-top:2em; color:#E3882D; text-align:center;">&copy; 2025 Chat En Temps Réel</div>
+        </div>
 </body>
 </html>
