--- a/views/register.twig
+++ b/views/register.twig
@@ -6,26 +6,23 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
-        <h2>Inscription</h2>
-        <form id="registerForm" method="POST" action="/register">
-            <div>
-                <label for="pseudo">Pseudo :</label>
+        <div class="container">
+            <h1>Inscription</h1>
+            <form id="registerForm" method="POST" action="/register">
+                <label for="pseudo">Pseudo</label>
                 <input type="text" id="pseudo" name="pseudo" required>
-            </div>
-            <div>
-                <label for="password">Mot de passe :</label>
+                <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" required>
-            </div>
-            <div>
-                <label for="email">Email :</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
+                <button type="submit" class="button">S'inscrire</button>
+            </form>
+            <div id="registerMessage"></div>
+            <div style="margin-top: 18px; text-align: center;">
+                <a href="/login">Déjà inscrit ? Se connecter</a>
             </div>
-            <button type="submit">S'inscrire</button>
-        </form>
-        <div id="registerMessage"></div>
-        <a href="/">Déjà inscrit ? Se connecter</a>
-    </div>
+            <div class="footer" style="margin-top:2em; color:#E3882D; text-align:center;">&copy; 2025 Chat En Temps Réel</div>
+        </div>
     <script src="/register.js"></script>
 </body>
 </html>
