--- a/views/validated.twig
+++ b/views/validated.twig
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
-        <h2>Votre compte a bien été validé !</h2>
-        <p>Bienvenue, {{ pseudo }}.</p>
-        <a href="/chat"><button>Accéder au chat</button></a>
-    </div>
+        <div class="container">
+            <h1>Votre compte a bien été validé !</h1>
+            <p>Bienvenue, <b>{{ pseudo }}</b>.</p>
+            <a href="/chat" class="button">Accéder au chat</a>
+            <div class="footer" style="margin-top:2em; color:#E3882D; text-align:center;">&copy; 2025 Chat En Temps Réel</div>
+        </div>
 </body>
 </html>
